# sc-oop

./: .gitignore  README.md  interactiveTrajectory.py  pyproject.toml  requirements.txt  switch.py
docs/api/: index.md  plotting.md
scoop/: __init__.py  pli.py
scoop/plotting/: __init__.py
scoop/plotting/_tools/: scatterplots.py
scoop/plotting/interactive_plots/: iscatterplots.py
