[project]
name = "scoop"
dynamic = ["version"]
authors = [
    {name="Benamad Kader Houssein"},
    {name="Abdou Khadre Djeylani Diouf"}
]
dependencies = [
    "scanpy",
    "plotly",
]
description = "A dynamic scanpy plotting alternative based on plotly"
readme = "README.md"
license = "BSD-3-clause"
keywords = ["single cell", "visualization"]
[project.urls]
Repository = "https://github.com/kaderhoussein/sc_oop"
Documentation = "https://kaderhoussein.github.io/sc_oop"
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["sc_oop/tests"]
[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "sc_oop/_version.py"

[project.optional-dependencies]
test = [
    "test.py"
]
docs = [
    "pytz",
    "tzdata", # avoid error on CI
    "sphinx>=7",
    "sphinx-book-theme>=1.1.0",
    "sphinx-autodoc-typehints>=1.25.2",
    "sphinx-gitref",
    "myst-parser>=2",
    "myst-nb>=1",
    "sphinx-design",
    "readthedocs-sphinx-search",
    "sphinxext-opengraph", # for nice cards when sharing on social
    "sphinx-copybutton",
    "nbsphinx>=0.9",
    "ipython>=7.20",  # for nbsphinx code highlighting,
    "nbclean",
]
dev = [
    "pre-commit"
]